# TokenSmith

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: bench_caching.py  bench_context.py
demo/: index.html
examples/: real_cache_run.py
src/tokensmith/: __init__.py  __main__.py  economics.py  pipeline.py  pricing.py  tokenizer.py
src/tokensmith/caching/: __init__.py  lint.py  planner.py
src/tokensmith/context/: __init__.py  budget.py  compress.py
src/tokensmith/providers/: __init__.py  anthropic_provider.py  base.py  mock.py  openai_provider.py
tests/: test_oss_caching.py  test_tokensmith.py
