[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokensmith"
version = "0.1.0"
description = "Provider-agnostic toolkit for prompt-cache optimization and context engineering."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aurelis" }]
keywords = ["llm", "prompt-caching", "context-engineering", "cost-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wzltmp/TokenSmith"
Repository = "https://github.com/wzltmp/TokenSmith"
Issues = "https://github.com/wzltmp/TokenSmith/issues"

[project.optional-dependencies]
tokenizer = ["tiktoken>=0.7"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=8.0"]
all = ["tiktoken>=0.7", "anthropic>=0.40", "openai>=1.40", "pytest>=8.0"]

[project.scripts]
tokensmith-bench = "tokensmith.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokensmith = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
